fix(client): add fill: none to globe svg paths in high contrast mode

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -481,6 +481,7 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
   }
 
   .lang-button-nav svg path {
+    fill: none !important;
     stroke: ButtonText !important;
   }
 
